[package]
name = "outline_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = "1.0.140"
tokio = { version = "1.20.1", features = ["full"] }
serde_derive = "1.0.140"
toml = "0.5"
chrono = "0.4.19"